--- a/src/index.html
+++ b/src/index.html
@@ -278,7 +278,7 @@
                   <img
                     src="./assets/content/images/Personnel1cropped-enhanced.png"
                     class="hero-img shadow"
-                    alt="Khnami palliative center nurses |  Խնամի պալիատիվ կենտրոնի բուժքույրեր"
+                    alt="Khnami provides palliative care to patients with chronic diseases |  Խնամի-ն ցուցաբերում է պալիատիվ խնամք ծանր քրոնիկ հիվանդներին"
                   />
             </picture>
           </div>
